# rattler

./: .dprint.jsonc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  AI_POLICY.md  ARCHITECTURE.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build_and_run.sh  cliff.toml  environment.yml  help.html  index.html  lefthook.yaml  pixi.toml  release-plz.toml  renovate.json5  settings.html  src-files.js  typos.toml  versions.txt
crates/async_http_range_reader/: Cargo.toml  README.md
crates/async_http_range_reader/src/: async_http_range_reader.rs  async_http_range_reader_error.rs  lib.rs  sparse_range.rs
crates/coalesced_map/: CHANGELOG.md  Cargo.toml  README.md
crates/coalesced_map/src/: lib.rs
crates/file_url/: CHANGELOG.md  Cargo.toml
crates/file_url/src/: lib.rs
crates/path_resolver/: CHANGELOG.md  Cargo.toml
crates/path_resolver/benches/: path_resolver_bench.rs
crates/path_trie/: Cargo.toml
crates/path_trie/src/: lib.rs
crates/py_rattler_types/: Cargo.toml
crates/pyo3-rattler/: Cargo.toml
crates/rattler/: CHANGELOG.md  Cargo.toml  build.rs
crates/rattler-bin/: CHANGELOG.md  Cargo.toml  pixi.toml
crates/rattler-index-s3/: Cargo.toml
crates/rattler_auth/: Cargo.toml
crates/rattler_cache/: CHANGELOG.md  Cargo.toml
crates/rattler_cas/: Cargo.toml
crates/rattler_cas_tar/: Cargo.toml
crates/rattler_conda_types/: CHANGELOG.md  Cargo.toml
crates/rattler_config/: CHANGELOG.md  Cargo.toml
crates/rattler_digest/: CHANGELOG.md  Cargo.toml
crates/rattler_fs_safety/: Cargo.toml
crates/rattler_fuse/: Cargo.toml
crates/rattler_fuse_test/: Cargo.toml
crates/rattler_git/: CHANGELOG.md  Cargo.toml
crates/rattler_glob/: Cargo.toml
crates/rattler_history/: Cargo.toml
crates/rattler_index/: CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  pixi.toml
crates/rattler_libsolv_c/: CHANGELOG.md  Cargo.toml  build.rs
js-rattler/: .gitattributes  .gitignore  .prettierrc  Cargo.toml  README.md  api-extractor.json  jest.config.js  jest.config.mjs  package-lock.json  package.json  pixi.toml  rollup.config.browser.mjs  rollup.config.cjs.mjs  rollup.config.commonjs.mjs  rollup.config.esm.mjs  rollup.config.mjs  rollup.config.types.mjs  tsconfig.json  tsconfig.rollup.json  webpack.config.js  webpack.config.mjs
js-rattler/.cargo/: config.toml
js-rattler/crate/: build_number_spec.rs  error.rs  gateway.rs  lib.rs  match_spec.rs  noarch_type.d.ts  noarch_type.rs  package_metadata.rs  package_name.d.ts  package_name.rs  package_record.d.ts  package_record.rs  parse_strictness.rs  platform.d.ts  platform.rs  solve.rs  version.rs  version_spec.rs  version_with_source.rs
js-rattler/e2e/: main.cjs  main.mjs
js-rattler/js/: index.d.ts  platform.js
js-rattler/src/: BuildNumberSpec.test.ts  BuildNumberSpec.ts  Gateway.test.ts  Gateway.ts  MatchSpec.test.ts  MatchSpec.ts  PackageName.test.ts  PackageName.ts  PackageRecord.test.ts  PackageRecord.ts  Platform.ts  Version.test.ts  Version.ts  VersionSpec.test.ts  VersionSpec.ts  areVersionsEqual.ts  esm.ts  index.ts  networking.test.ts  solve.test.ts  solve.ts  stub.bundler.ts  stub.ts  typeUtils.ts
js-rattler/tests/: wasm.rs
py-rattler/: .gitignore  CHANGELOG.md  Cargo.toml  create_example.py  foo.py  mkdocs.yml  pixi.toml  pyproject.toml  start_shell_in_dematerialized.py  todo.md  versions.json
py-rattler/dev/: 404.html  index.html  llms.txt  objects.inv  sitemap.xml
py-rattler/docs/: about_json.md  activation_error.md  activation_variables.md  client.md  conda_locked_binary_package.md  conda_locked_package.md  conda_locked_source_package.md  detect_virtual_package_error.md  environment.md  environment_creation_error.md  fetch_repo_data.md  fetch_repo_data_error.md  file_mode.md  gateway.md  index.md  index_.md  index_json.md  installer.md  invalid_channel_error.md  invalid_match_spec_error.md  invalid_package_name_error.md  invalid_url_error.md  invalid_version_error.md  io_error.md  link_error.md  lock_file.md  locked_package.md  logging.md  match_spec.md  package_hashes.md  package_name.md  parse_arch_error.md  parse_platform_error.md  path_type.md  paths_entry.md  paths_json.md  platform.md  prefix_placeholder.md  prefix_record.md  pypi_locked_package.md  (+9 more)
py-rattler/examples/: basic_usage.py  cli.py  install_to_prefix.py  solve_and_install.py
py-rattler/pyo3-rattler/: Cargo.toml
py-rattler/rattler/: __init__.py  exception.py  exceptions.py  package_cache.py
py-rattler/scripts/: ensure-version-synced.nu  verify_docstrings.py
py-rattler/src/: about_json.rs  component.rs  config.rs  error.rs  exceptions.rs  explicit_environment_spec.rs  generic_virtual_package.rs  index.rs  index_json.rs  install.rs  installer.rs  lib.rs  linker.rs  lock.rs  match_spec.rs  nameless_match_spec.rs  no_arch_type.rs  package_cache.rs  package_name.rs  package_name_matcher.rs  paths_json.rs  platform.rs  prefix_data.rs  prefix_paths.rs  prefix_record.rs  py_install_reporter.rs  record.rs  run_exports_json.rs  shell.rs  solver.rs  solver_task.rs  utils.rs  version.rs  virtual_package.rs
py-rattler/tests/: conftest.py
py-rattler/v0.23.2/: 404.html  index.html  llms-full.txt  llms.txt  sitemap.xml
py-rattler/v0.24.0/: 404.html  index.html  llms.txt  sitemap.xml
py-rattler/v0.25.0/: 404.html  index.html  index.md  llms.txt  objects.inv  sitemap.xml
pyo3-rattler/: .gitignore  Cargo.toml
pyo3-rattler/docs/: activate.md  activation_result.md  arch.md  authenticated_client.md  cache_dir_error.md  channel.md  channel_config.md  fetch_repo_data_error.md  generic_virtual_package.md  invalid_package_name_error.md  invalid_url_error.md  io_error.md  link_error.md  linker.md  nameless_match_spec.md  package_record.md  patch_instructions.md  path_modification_behavior.md  prefix_paths.md  repo_data.md  sparse_repo_data.md  version.md  version_with_source.md  virtual_package.md
pyo3-rattler/py-rattler/: Cargo.toml  pixi.toml
pyo3-rattler/rattler/: __init__.py
pyo3-rattler/src/: lib.rs  meta.rs  nameless_match_spec.rs  shell.rs  solver.rs
(+63942 files in other folders)
