[workspace]
members = ["crates/*", "tools/*"]
resolver = "2"

# See: https://docs.rs/insta/latest/insta/#optional-faster-runs
[profile.dev.package.insta]
opt-level = 3

[workspace.package]
categories = ["development-tools"]
homepage = "https://github.com/conda/rattler"
repository = "https://github.com/conda/rattler"
license = "BSD-3-Clause"
edition = "2021"
readme = "README.md"

[workspace.metadata.release]
allow-branch = ["main"]
consolidate-commits = true
tag-prefix = ""

[profile.bench]
lto = true

[workspace.dependencies]
anyhow = "1.0.92"
archspec = "0.1.3"
assert_matches = "1.5.0"
async-compression = { version = "0.4.17", features = [
    "gzip",
    "tokio",
    "bzip2",
    "zstd",
] }
async-fd-lock = "0.2.0"
fs4 = "0.11.0"
async-trait = "0.1.83"
axum = { version = "0.7.7", default-features = false, features = [
    "tokio",
    "http1",
] }
base64 = "0.22.1"
bindgen = "0.69.5"
blake2 = "0.10.6"
bytes = "1.8.0"
bzip2 = "0.4.4"
cache_control = "0.2.0"
cfg-if = "1.0"
chrono = { version = "0.4.38", default-features = false, features = [
    "std",
    "serde",
    "alloc",
] }
clap = { version = "4.5.20", features = ["derive"] }
cmake = "0.1.51"
console = { version = "0.15.8", features = ["windows-console-colors"] }
criterion = "0.5"
dashmap = "6.1.0"
difference = "2.0.0"
digest = "0.10.7"
dirs = "5.0.1"
dunce = "1.0.5"
enum_dispatch = "0.3.13"
fs-err = { version = "3.0.0", features = ["tokio"] }
fslock = "0.2.1"
futures = "0.3.31"
futures-util = "0.3.31"
fxhash = "0.2.1"
# lots of other crates are still stuck on older version
generic-array = "0.14.7"
getrandom = { version = "0.2.15", default-features = false }
glob = "0.3.1"
google-cloud-auth = { version = "0.17.1", default-features = false }
google-cloud-token = "0.1.2"
hex = "0.4.3"
hex-literal = "0.4.1"
http = "1.1"
http-cache-semantics = "2.1.0"
humansize = "2.1.3"
humantime = "2.1.0"
indexmap = "2.6.0"
indicatif = "0.17.8"
insta = { version = "1.41.1" }
itertools = "0.13.0"
json-patch = "3.0.1"
keyring = "3.6.1"
lazy-regex = "3.3.0"
lazy_static = "1.5.0"
libc = { version = "0.2" }
libloading = "0.8.5"
libz-sys = { version = "1.1.20", default-features = false }
md-5 = "0.10.6"
memchr = "2.7.4"
memmap2 = "0.9.5"
netrc-rs = "0.1.2"
nom = "7.1.3"
num_cpus = "1.16.0"
once_cell = "1.20.2"
ouroboros = "0.18.4"
parking_lot = "0.12.3"
pathdiff = "0.2.2"
pep440_rs = { version = "0.7.2" }
pep508_rs = { version = "0.9.1" }
percent-encoding = "2.3.1"
pin-project-lite = "0.2.15"
plist = "1"
purl = { version = "0.1.3", features = ["serde"] }
quote = "1.0.37"
rand = "0.8.5"
reflink-copy = "0.1.19"
regex = "1.11.1"
reqwest = { version = "0.12.9", default-features = false }
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"
resolvo = { version = "0.8.4" }
retry-policies = { version = "0.4.0", default-features = false }
rmp-serde = { version = "1.3.0" }
rstest = { version = "0.23.0" }
rstest_reuse = "0.7.0"
simd-json = { version = "0.14.2", features = ["serde_impl"] }
serde = { version = "1.0.214" }
serde_json = { version = "1.0.132" }
serde_repr = "0.1"
serde_with = "3.11.0"
serde_yaml = "0.9.34"
serde-untagged = "0.1.6"
sha2 = "0.10.8"
shlex = "1.3.0"
similar-asserts = "1.6.0"
smallvec = { version = "1.13.2", features = [
    "serde",
    "const_new",
    "const_generics",
    "union",
] }
strum = { version = "0.26.3", features = ["derive"] }
superslice = "1.0.0"
syn = "2.0.86"
sysinfo = "0.32.0"
tar = "0.4.42"
tempdir = "0.3.7"
tempfile = "3.13.0"
temp-env = "0.3.6"
test-log = "0.2.16"
thiserror = "1.0"
tokio = { version = "1.41.0", default-features = false }
tokio-stream = "0.1.16"
tokio-util = "0.7.12"
tower = { version = "0.5.1", default-features = false }
tower-http = { version = "0.6.1", default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false }
tracing-test = { version = "0.2.5" }
trybuild = { version = "1.0.101" }
typed-path = { version = "0.9.3" }
url = { version = "2.5.2" }
uuid = { version = "1.11.0", default-features = false }
unicode-normalization = { version = "0.1.24" }
walkdir = "2.5.0"
windows-sys = { version = "0.59.0", default-features = false }
zip = { version = "2.2.0", default-features = false }
zstd = { version = "0.13.2", default-features = false }
