[workspace]
members = ["crates/*", "tools/*"]
resolver = "2"

# See: https://docs.rs/insta/latest/insta/#optional-faster-runs
[profile.dev.package.insta]
opt-level = 3

[workspace.package]
categories = ["development-tools"]
homepage = "https://github.com/conda/rattler"
repository = "https://github.com/conda/rattler"
license = "BSD-3-Clause"
edition = "2021"
readme = "README.md"

[workspace.metadata.release]
allow-branch = ["main"]
consolidate-commits = true
tag-prefix = ""

[profile.bench]
lto = true

[workspace.dependencies]
anyhow = "1.0.97"
archspec = "0.1.3"
assert_matches = "1.5.0"
async-compression = { version = "0.4.19", features = [
  "gzip",
  "tokio",
  "bzip2",
  "zstd",
] }
async-fd-lock = "0.2.0"
fs4 = "0.12.0"
async-trait = "0.1.87"
axum = { version = "0.8.1", default-features = false, features = [
  "tokio",
  "http1",
] }
base64 = "0.22.1"
bindgen = "0.71.1"
blake2 = "0.10.6"
bytes = "1.10.1"
bzip2 = "0.5.2"
cache_control = "0.2.0"
cfg-if = "1.0"
chrono = { version = "0.4.40", default-features = false, features = [
  "std",
  "serde",
  "alloc",
] }
clap = { version = "4.5.29", features = ["derive"] }
clap-verbosity-flag = "3.0.1"
cmake = "0.1.54"
console = { version = "0.15.11", features = ["windows-console-colors"] }
criterion = "0.5"
dashmap = "6.1.0"
difference = "2.0.0"
digest = "0.10.7"
dirs = "6.0.0"
dunce = "1.0.5"
enum_dispatch = "0.3.13"
fs-err = { version = "3.1.0" }
fslock = "0.2.1"
futures = "0.3.31"
futures-util = "0.3.31"
fxhash = "0.2.1"
# lots of other crates are still stuck on older version which breaks `deserialize`
generic-array = "0.14.7"
getrandom = { version = "0.3.1", default-features = false }
glob = "0.3.2"
google-cloud-auth = { version = "0.17.2", default-features = false }
google-cloud-token = "0.1.2"
aws-config = { version = "1.5.18", default-features = false, features = [
  "rt-tokio",
  "rustls",
  "sso",
] }
aws-sdk-s3 = { version = "1.78.0", default-features = false, features = [
  "rt-tokio",
  "rustls",
  "sigv4a",
] }
hex = "0.4.3"
hex-literal = "0.4.1"
http = "1.2"
http-cache-semantics = "2.1.0"
humansize = "2.1.3"
humantime = "2.1.0"
indexmap = "2.7.1"
indicatif = "0.17.11"
insta = { version = "1.42.1" }
itertools = "0.14.0"
json-patch = "3.0.1"
keyring = "3.6.2"
lazy-regex = "3.4.1"
libc = { version = "0.2" }
libloading = "0.8.6"
libz-sys = { version = "1.1.21", default-features = false }
md-5 = "0.10.6"
memchr = "2.7.4"
memmap2 = "0.9.5"
netrc-rs = "0.1.2"
nom = "7.1.3"
num_cpus = "1.16.0"
opendal = { version = "0.51.2", default-features = false }
once_cell = "1.20.3"
parking_lot = "0.12.3"
pathdiff = "0.2.3"
pep440_rs = { version = "0.7.3" }
pep508_rs = { version = "0.9.2" }
percent-encoding = "2.3.1"
pin-project-lite = "0.2.16"
plist = "1"
purl = { version = "0.1.5", features = ["serde"] }
quote = "1.0.39"
rand = "0.9.0"
rayon = "1.10.0"
reflink-copy = "0.1.25"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false }
reqwest-middleware = "0.4.1"
reqwest-retry = "0.7.0"
resolvo = { version = "0.8.6" }
retry-policies = { version = "0.4.0", default-features = false }
rmp-serde = { version = "1.3.0" }
rstest = { version = "0.24.0" }
rstest_reuse = "0.7.0"
simd-json = { version = "0.14.3", features = ["serde_impl"] }
self_cell = "1.1.0"
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
serde_repr = "0.1"
serde-value = "0.7.0"
serde_with = "3.12.0"
serde_yaml = "0.9.34"
serde-untagged = "0.1.7"
sha2 = "0.10.8"
shlex = "1.3.0"
similar-asserts = "1.6.1"
smallvec = { version = "1.14.0", features = [
  "serde",
  "const_new",
  "const_generics",
  "union",
] }
strum = { version = "0.27.0", features = ["derive"] }
superslice = "1.0.0"
syn = "2.0.100"
sysinfo = "0.33.1"
tar = "0.4.44"
tempdir = "0.3.7"
tempfile = "3.18.0"
temp-env = { version = "0.3.6", features = ["async_closure"] }
test-log = "0.2.17"
thiserror = "2.0"
tokio = { version = "1.44.0", default-features = false }
tokio-stream = "0.1.17"
tokio-util = "0.7.13"
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6.2", default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false }
tracing-test = { version = "0.2.5" }
trybuild = { version = "1.0.103" }
typed-path = { version = "0.10.0" }
url = { version = "2.5.4" }
unicode-normalization = "0.1.24"
uuid = { version = "1.13.1", default-features = false }
walkdir = "2.5.0"
wasmtimer = "0.4.1"
which = "7.0.2"
windows-sys = { version = "0.59.0", default-features = false }
winver = { version = "1.0.0" }
zip = { version = "2.2.3", default-features = false }
zstd = { version = "0.13.3", default-features = false }
