[package]
name = "js-rattler"
version = "0.1.1"
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
edition = "2021"
description = "WASM bindings to the rattler library"

[lib]
crate-type = ["cdylib", "rlib"]
path = "crate/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.50"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

thiserror = "2.0.12"

rattler_conda_types = { path = "../crates/rattler_conda_types" }
rattler_digest = { path = "../crates/rattler_digest" }
rattler_repodata_gateway = { path = "../crates/rattler_repodata_gateway", features = ["gateway"] }
rattler_solve = { path = "../crates/rattler_solve", default-features = false, features = ["resolvo"] }
rattler_networking = { path = "../crates/rattler_networking", default-features = false }

url = "2.5.4"

# By adding the `libbz2-rs-sys` feature we ensure that bzip2 is using the rust
# implementation. This is important because the C implementation is not
# compatible with wasm.
bzip2 = { version = "0.5.1", features = ["libbz2-rs-sys"] }

chrono = { version = "0.4.40", features = ["wasmbind"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.45"

[profile.release]
## Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

# Prevent package from thinking it's in the workspace
[workspace]
