[package]
name = "py-rattler"
version = "0.16.0"
edition = "2021"
license = "BSD-3-Clause"
publish = false

[lib]
name = "rattler"
crate-type = ["cdylib"]

[features]
default = ["rustls-tls"]
native-tls = [
    "rattler_networking/native-tls",
    "rattler_repodata_gateway/native-tls",
]
rustls-tls = [
    "rattler_networking/rustls-tls",
    "rattler_repodata_gateway/rustls-tls",
    "reqwest/rustls-tls-native-roots",
]
vendored-openssl = ["openssl", "openssl/vendored"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42" }
futures = "0.3.31"
parking_lot = { version = "0.12.5", features = ["arc_lock", "send_guard"] }

rattler_s3 = { path = "../crates/rattler_s3", features = ["serde"]}
rattler = { path = "../crates/rattler", default-features = false, features = [
    "indicatif",
] }
rattler_repodata_gateway = { path = "../crates/rattler_repodata_gateway", default-features = false, features = [
    "sparse",
    "gateway",
] }
rattler_conda_types = { path = "../crates/rattler_conda_types", default-features = false }
rattler_config = { path = "../crates/rattler_config", default-features = false }
rattler_digest = { path = "../crates/rattler_digest" }
rattler_networking = { path = "../crates/rattler_networking", default-features = false, features = [
    "gcs",
    "s3",
    "system-integration"
] }
rattler_shell = { path = "../crates/rattler_shell", default-features = false }
rattler_virtual_packages = { path = "../crates/rattler_virtual_packages", default-features = false }
rattler_solve = { path = "../crates/rattler_solve", default-features = false, features = [
    "resolvo",
] }
rattler_index = { path = "../crates/rattler_index" }
rattler_lock = { path = "../crates/rattler_lock", default-features = false }
rattler_package_streaming = { path = "../crates/rattler_package_streaming", default-features = false }
py_rattler_types = { path = "../crates/py_rattler_types" }
pyo3 = { version = "0.26.0", features = [
    "abi3-py38",
    "extension-module",
    "multiple-pymethods",
    "chrono",
] }
pyo3-async-runtimes = { version = "0.26.0", features = ["tokio-runtime"] }
pythonize = "0.26.0"
tokio = { version = "1.47.1" }

reqwest = { version = "0.12.15", default-features = false }
reqwest-middleware = "0.4.2"

thiserror = "2.0.17"
url = "2.5.4"

openssl = { version = "0.10", optional = true }
pep508_rs = "0.9.2"
serde_json = "1.0.145"
pyo3-file = "0.14.0"

[build-dependencies]
pyo3-build-config = "0.26.0"


[patch.crates-io]

# Prevent package from thinking it's in the workspace
[workspace]
