[package]
name = "py-rattler"
version = "0.18.0"
edition = "2021"
license = "BSD-3-Clause"
publish = false

[lib]
name = "rattler"
crate-type = ["cdylib"]

[features]
default = ["rustls-tls"]
native-tls = [
    "rattler_networking/native-tls",
    "rattler_repodata_gateway/native-tls",
]
rustls-tls = [
    "rattler_networking/rustls-tls",
    "rattler_repodata_gateway/rustls-tls",
    "reqwest/rustls-tls-native-roots",
]
vendored-openssl = ["openssl", "openssl/vendored"]
pty = ["rattler_pty", "nix"]

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4" }
futures = "0.3.31"
parking_lot = { version = "0.12.3", features = ["arc_lock", "send_guard"] }

rattler_s3 = { path = "../crates/rattler_s3", features = ["serde"]}
rattler = { path = "../crates/rattler", default-features = false, features = [
    "indicatif",
] }
rattler_repodata_gateway = { path = "../crates/rattler_repodata_gateway", default-features = false, features = [
    "sparse",
    "gateway",
    "indicatif",
] }
rattler_conda_types = { path = "../crates/rattler_conda_types", default-features = false }
rattler_config = { path = "../crates/rattler_config", default-features = false }
rattler_digest = { path = "../crates/rattler_digest" }
rattler_networking = { path = "../crates/rattler_networking", default-features = false, features = [
    "gcs",
    "s3",
    "system-integration"
] }
rattler_shell = { path = "../crates/rattler_shell", default-features = false }
rattler_pty = { path = "../crates/rattler_pty", default-features = false, optional = true }
rattler_virtual_packages = { path = "../crates/rattler_virtual_packages", default-features = false }
rattler_solve = { path = "../crates/rattler_solve", default-features = false, features = [
    "resolvo",
] }
rattler_index = { path = "../crates/rattler_index" }
rattler_lock = { path = "../crates/rattler_lock", default-features = false }
rattler_package_streaming = { path = "../crates/rattler_package_streaming", default-features = false }
pyo3 = { version = "0.25.1", features = [
    "abi3-py38",
    "extension-module",
    "multiple-pymethods",
    "chrono",
] }
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] }
pythonize = "0.25.0"
tokio = { version = "1.46.1" }

reqwest = { version = "0.12.15", default-features = false }
reqwest-middleware = "0.4.2"

thiserror = "2.0.12"
url = "2.5.4"

openssl = { version = "0.10", optional = true }
pep508_rs = "0.9.2"
serde_json = "1.0.140"
pyo3-file = "0.13.0"
nix = { version = "0.30.1", features = ["process"], optional = true }

[build-dependencies]
pyo3-build-config = "0.25.1"


[patch.crates-io]

# Prevent package from thinking it's in the workspace
[workspace]
