[build-system]
requires = ["maturin~=1.2.1"]
build-backend = "maturin"

[project]
name = "rattler"
requires-python = ">=3.8"
authors = [
    { name = "Bas Zalmstra", email = "zalmstra.bas@gmail.com" },
    { name = "Tarun Pratap Singh", email = "pratapsinghtarun9@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]
license = "BSD-3-Clause"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 120
