[package]
name = "async_http_range_reader"
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
version = "0.4.0"
edition = "2021"
description = "A library for streaming reading of files over HTTP using range requests"
license = "BSD-3"
repository = "https://github.com/mamba-org/rattler"

[dependencies]
futures = "0.3.28"
http-content-range = "0.1.2"
itertools = "0.11.0"
bisection = "0.1.0"
memmap2 = "0.9.0"
reqwest = { version = "0.11.22", default-features = false, features = ["stream"] }
tokio = { version = "1.33.0", default-features = false }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-util = "0.7.9"
thiserror = "1.0.50"
tracing = "0.1.40"

[dev-dependencies]
axum = { version = "0.6.20", default-features = false, features = ["tokio"] }
tokio = { version = "1.33.0", default-features = false, features = ["macros", "test-util"] }
tower-http = { version = "0.4.4", default-features = false, features = ["fs"] }
async_zip = { version = "0.0.15", default-features = false, features = ["tokio"] }
assert_matches = "1.5.0"
rstest = { version = "0.18.2" }
url = { version = "2.4.1" }
