[package]
name = "async_http_range_reader"
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
version = "0.4.0"
edition = "2021"
description = "A library for streaming reading of files over HTTP using range requests"
license = "BSD-3"
repository = "https://github.com/mamba-org/rattler"

[dependencies]
bisection = { workspace = true }
futures = { workspace = true }
http-content-range = { workspace = true }
itertools = { workspace = true }
memmap2 = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
reqwest-middleware = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
axum = { version = "0.6.20", default-features = false, features = ["tokio"] }
tokio = { version = "1.33.0", default-features = false, features = ["macros", "test-util"] }
tower-http = { version = "0.4.4", default-features = false, features = ["fs"] }
async_zip = { version = "0.0.15", default-features = false, features = ["tokio"] }
assert_matches = "1.5.0"
rstest = { version = "0.18.2" }
url = { version = "2.4.1" }
