[package]
name = "async_http_range_reader"
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
version = "0.4.0"
edition = "2021"
description = "A library for streaming reading of files over HTTP using range requests"
license = "BSD-3"
repository = "https://github.com/mamba-org/rattler"

[dependencies]
bisection = { workspace = true }
futures = { workspace = true }
http-content-range = { workspace = true }
itertools = { workspace = true }
memmap2 = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
reqwest-middleware = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
axum = { workspace = true, features = ["tokio"] }
tokio = { workspace = true, features = ["macros", "test-util"] }
tower-http = { workspace = true, features = ["fs"] }
async_zip = { workspace = true, features = ["tokio"] }
assert_matches = { workspace = true }
rstest = { workspace = true }
url = { workspace = true }
