[package]
name = "file_url"
version = "0.2.6"
edition.workspace = true
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
description = "Helper functions to work with file:// urls"
categories.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
url = { workspace = true }
percent-encoding = { workspace = true }
itertools = { workspace = true }
typed-path = { workspace = true }
thiserror = "2.0.12"

[dev-dependencies]
rstest = { workspace = true }
